chore: redesign credential tool to use sdk prompting, do not pull from env. rely on overrides for that
Signed-off-by: Taylor Price <tayworm@gmail.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-fastapi
-uvicorn[standard]
-openai
 azure-identity
-azure-mgmt-resource
 azure-mgmt-cognitiveservices
+azure-mgmt-resource
+fastapi
+gptscript
+openai
 requests
+uvicorn[standard]
